<resources>
    <string-array name="strs">
        <item>Register</item>
        <item>Lock</item>
        <item>More</item>
        <item>Task</item>
        <item>Request</item>
        <item>Recording</item>
    </string-array>
    <string-array name="my_gird_img_text">
        <item>read ID</item>
        <item>unlock</item>
        <item>lock</item>
        <item>write ID</item>
        <item>install down</item>
        <item>rewriteID</item>
        <item>read temperature</item>
        <item>read or write data</item>
    </string-array>
    <string name="CompanyName">Smart Lock</string>
    <string name="app_name">Smart Lock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="regist">Register</string>
    <string name="account">Username:</string>
    <string name="password">Password:</string>
    <string name="determine">OK</string>
    <string name="complete">complete</string>
    <string name="enter_account">please input username</string>
    <string name="enter_password">password</string>
    <string name="enter_old_password">please enter the original password</string>
    <string name="enter_new_password">please enter a new password</string>
    <string name="enter_new_password_again">please enter your new password again</string>
    <string name="enter_phone_number">phone number</string>
    <string name="phone_number">Phone number:</string>
    <string name="phone_dt">Department:</string>
    <string name="regist_Referees_number">please enter the referrer number</string>
    <string name="enter_username">please enter user name</string>
    <string name="enter_Department">please enter the department</string>
    <string name="enter_code">verification code</string>
    <string name="enter_repeat_password">password again</string>
    <string name="phone_registered">register</string>
    <string name="forgot_password">forget</string>
    <string name="retrieve_password">retrieve password</string>
    <string name="send_verification">send</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="user_registration_agreement">User registration agreement</string>
    <string name="smart_lock">Smart Lock</string>
    <string name="start">experience now</string>
    <string name="change_password">change Password</string>
    <string name="area">Region:</string>
    <string name="user_type">User type:</string>
    <string name="Application_areas">Application area</string>
    <string name="task_user_name">applicant:</string>
    <string name="start_date">Start date:</string>
    <string name="start_date_operaor">Start date：</string>
    <string name="end_date">End date:</string>
    <string name="end_date_operaor">End date：</string>
    <string name="start_time">Start time:</string>
    <string name="end_time">Stop time:</string>
    <string name="task_apply">Task request</string>
    <string name="taskList">Task list</string>
    <string name="Areamanagement">Area manager</string>
    <string name="switchArea">switch area</string>
    <string name="jurisdictionmanagement">Authority management</string>
    <string name="quicklyunlock">quick lock</string>
    <string name="moremuch_PD">Production management</string>
    <string name="versionupdating">version update</string>
    <string name="help">help</string>
    <string name="feedback">Feedback</string>
    <string name="permissionassignment">Authority allocation</string>
    <string name="applicationinformation">Application Information</string>
    <string name="lockregistered">lock register</string>
    <string name="lockfileinfo">lock information</string>
    <string name="lockfile">lock file</string>
    <string name="persondata">information</string>
    <string name="unlockrecord">lock recording</string>
    <string name="detailinfor">detail information</string>
    <string name="operator">operator</string>
    <string name="belongarea">Area</string>
    <string name="lock_time">lock time</string>
    <string name="locKID">lock ID</string>
    <string name="lockName">username</string>
    <string name="locK_ID">lock ID</string>
    <string name="modify_locK_ID">lock ID：</string>
    <string name="register_locK_ID">lock ID:</string>
    <string name="enter_locK_ID">Please enter the ID of the lock</string>
    <string name="registposition">Registered address</string>
    <string name="lockarea">Lock position</string>
    <string name="areanumber">Area number</string>
    <string name="phonenumber">189~~~~9527</string>
    <string name="update_secret_key">update key</string>
    <string name="regist_place">Registration</string>
    <string name="modify_regist_place">Registration：</string>
    <string name="register_regist_place">Registration:</string>
    <string name="enter_regist_place">please enter the place of registration</string>
    <string name="lock_bit">Lock position</string>
    <string name="register_lock_bit">Lock position:</string>
    <string name="regist_time">Registration time</string>
    <string name="register_regist_time">Registration time:</string>
    <string name="content_apply">Application content</string>
    <string name="contact_administrator">Call manager:</string>
    <string name="key_atate">Key state</string>
    <string name="agreed">agree</string>
    <string name="disagreed">disagree</string>
    <string name="lock_name">Lock name</string>
    <string name="modify_lock_name">Lock name：</string>
    <string name="register_lock_name">Lock name:</string>
    <string name="area_number">Area number:</string>
    <string name="exit">exit</string>
    <string name="about">about</string>
    <string name="set">setting</string>
    <string name="bt_unlock">bluetooth unlock</string>
    <string name="enter_file_name">please enter the name of the area</string>
    <string name="cancel">cancel</string>
    <string name="search">search</string>
    <string name="add">add</string>
    <string name="choose_date">Please set the query conditions</string>
    <string name="registadress">Registered address</string>
    <string name="lockoption">Operation type</string>
    <string name="lockDateTime">Operation date</string>
    <string name="lockResult">Operating state</string>
    <string name="lockposition">Lock position</string>
    <string name="locknumber">device ID</string>
    <string name="modify_locknumber">device ID：</string>
    <string name="register_locknumber">device ID:</string>
    <string name="enter_locknumber">Please enter the device number</string>
    <string name="locktype">device type</string>
    <string name="modify_locktype">device type：</string>
    <string name="register_locktype">device type:</string>
    <string name="enter_locktype">please enter the device type</string>
    <string name="enter_areaname">please enter the name of the area</string>
    <string name="neirong">content:</string>
    <string name="tasktrue">agree</string>
    <string name="taskfalse">disagree</string>
    <string name="title_activity_pd">PDActivity</string>
    <string name="title_activity_more_pd">MorePDActivity</string>
    <string name="title_activity_test_read_id">TestReadIdActivity</string>
    <string name="registDateTime">register time</string>
    <string name="enter_conditSearch">please enter a conditional query</string>
    <string name="enter_lockFileSearch">please enter ID</string>
    <string name="enter_lockNmae">Please enter the name of the lock</string>
    <string name="title_activity_write_id">WriteIdActivity</string>
    <string name="title_activity_pd_un_lock">PdUnLockActivity</string>
    <string name="title_activity_pd_lock">PdLockActivity</string>
    <string name="title_activity_re_write_id">ReWriteIdActivity</string>
    <string name="title_activity_xiazhuang">XiazhuangActivity</string>
    <string name="title_activity_re_write">ReWriteActivity</string>
    <string name="childMeterOne">device1:</string>
    <string name="enter_childMeterOneID">please enter the ID of device1</string>
    <string name="childMeterOneID">device1 ID:</string>
    <string name="childMeterTwo">device2:</string>
    <string name="enter_childMeterTwoID">please enter the ID of device2</string>
    <string name="childMeterTwoID">device2 ID</string>
    <string name="childMeterThree">device3:</string>
    <string name="enter_childMeterThreeID">please enter the ID of device3</string>
    <string name="childMeterThreeID">device3 ID</string>
    <string name="childMeterFour">device4:</string>
    <string name="enter_childMeterFourID">please enter the ID of device4</string>
    <string name="childMeterFourID">device4 ID</string>
    <string name="childMeterFive">device5:</string>
    <string name="enter_childMeterFiveID">please enter the ID of device5</string>
    <string name="childMeterFiveID">device5 ID</string>
    <string name="childMeterSix">device6:</string>
    <string name="enter_childMeterSixID">please enter the ID of device6</string>
    <string name="childMeterSixID">device6 ID</string>
    <string name="childMeterServen">device7:</string>
    <string name="enter_childMeterServenID">please enter the ID of device7</string>
    <string name="childMeterServenID">device7 ID</string>
    <string name="childMeterEight">device8:</string>
    <string name="enter_childMeterEightID">please enter the ID of device8</string>
    <string name="childMeterEightID">device8 ID</string>
    <string name="childMeterNine">device9:</string>
    <string name="enter_childMeterNineID">please enter the ID of device9</string>
    <string name="childMeterNineID">device9 ID</string>
    <string name="childMeterTen">device10:</string>
    <string name="enter_childMeterTenID">please enter the ID of device10</string>
    <string name="childMeterTenID">device10 ID</string>
    <string name="childMeterEle">device11:</string>
    <string name="enter_childMeterEleID">please enter the ID of device11</string>
    <string name="childMeterEleID">device11 ID</string>
    <string name="childMeterTwe">device12:</string>
    <string name="enter_childMeterTweID">please enter the ID of device12</string>
    <string name="childMeterTweID">device12 ID</string>
    <string name="childMeterThi">device13:</string>
    <string name="enter_childMeterThiID">please enter the ID of device13</string>
    <string name="childMeterThiID">device13 ID</string>
    <string name="childMeterFou">device14:</string>
    <string name="enter_childMeterFouID">please enter the ID of device14</string>
    <string name="childMeterFouID">device14 ID</string>
    <string name="childMeterFif">device15:</string>
    <string name="enter_childMeterFifID">please enter the ID of device15</string>
    <string name="GpsCoordinate">GPS coordinate</string>
    <string name="belongarea_number">Area number</string>
    <string name="belongarea_nane">Area name</string>
    <string name="operator_phonenumber">Operator phone</string>
    <string name="chadangan">find file</string>
    <string name="lockstatistics">Unlocking statistics</string>
    <string name="unlockcontrail">Unlocking track</string>
    <string name="traffic_tools">Transportation</string>
    <string name="PersonnelMaintain">Personnel maintenance</string>
    <string name="Unit_name">company name</string>
    <string name="enter_Unit_name">Maintenance unit name</string>
    <string name="team_name">Team name</string>
    <string name="enter_team_name">Enter the team name</string>
    <string name="enter_traffic_tools">Maintenance of transportation</string>
    <string name="Production_tools">production tool</string>
    <string name="enter_Production_tools">Maintenance of production tools</string>
    <string name="Safety_matters">safety matters</string>
    <string name="enter_Safety_matters">Maintenance safety matters</string>
    <string name="direct_more_unlock">connecting directly</string>
</resources>