<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_person_maint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.xyw.smartlock.activity.PersonMaintainActivity">

    <include
        android:id="@+id/person_maintain_title"
        layout="@layout/common_title"/>

    <ScrollView
        android:id="@+id/person_maintain_scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/person_maintain_title"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.xyw.smartlock.view.LayoutItem1
                android:id="@+id/person_maintain_RelativeLayout01"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/layout_item_bg"
                app:itemImgHeight="@dimen/margin_20"
                app:itemImgSrc="@mipmap/into"
                app:itemImgWidth="@dimen/margin_20"
                app:itemText="@string/Unit_name"
                app:itemText2="@string/enter_Unit_name"
                app:itemTextColor="@color/black"/>

            <com.xyw.smartlock.view.LayoutItem1
                android:id="@+id/person_maintain_RelativeLayout02"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/layout_item_bg"
                app:itemImgHeight="@dimen/margin_20"
                app:itemImgSrc="@mipmap/into"
                app:itemImgWidth="@dimen/margin_20"
                app:itemText="@string/team_name"
                app:itemText2="@string/enter_team_name"
                app:itemTextColor="@color/black"/>

            <com.xyw.smartlock.view.LayoutItem1
                android:id="@+id/person_maintain_RelativeLayout03"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/layout_item_bg"
                app:itemImgHeight="@dimen/margin_20"
                app:itemImgSrc="@mipmap/into"
                app:itemImgWidth="@dimen/margin_20"
                app:itemText="@string/traffic_tools"
                app:itemText2="@string/enter_traffic_tools"
                app:itemTextColor="@color/black"/>

            <com.xyw.smartlock.view.LayoutItem1
                android:id="@+id/person_maintain_RelativeLayout04"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/layout_item_bg"
                app:itemImgHeight="@dimen/margin_20"
                app:itemImgSrc="@mipmap/into"
                app:itemImgWidth="@dimen/margin_20"
                app:itemText="@string/Production_tools"
                app:itemText2="@string/enter_Production_tools"
                app:itemTextColor="@color/black"/>

            <com.xyw.smartlock.view.LayoutItem1
                android:id="@+id/person_maintain_RelativeLayout05"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/layout_item_bg"
                app:itemImgHeight="@dimen/margin_20"
                app:itemImgSrc="@mipmap/into"
                app:itemImgWidth="@dimen/margin_20"
                app:itemText="@string/Safety_matters"
                app:itemText2="@string/enter_Safety_matters"
                app:itemTextColor="@color/black"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
