<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.LockFileChildMeter">

    <include
        android:id="@+id/commontitlebar"
        layout="@layout/activity_commontitlebar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterOne"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterOne"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterTwo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterTwo"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterThree"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterThree"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterFour"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterFour"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterFive"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterFive"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterSix"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterSix"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterServen"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterServen"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterEight"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterEight"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterNine"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterNine"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterTen"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterTen"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterEle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterEle"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterTwe"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterTwe"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterThi"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterThi"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterFou"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterFou"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

            <com.xyw.smartlock.view.CustomItemTextView
                android:id="@+id/lockfilechildMeterFif"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_45"
                app:title="@string/childMeterFif"
                app:titleColor="@color/black"
                app:titleLines="1"
                app:contentLines="1"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
