<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <include
        android:id="@+id/commontitlebar2"
        layout="@layout/activity_commontitlebar"/>


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearlayout_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="20dp">

                <com.xyw.smartlock.view.LayoutItem1
                    android:id="@+id/moremuch_area"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/layout_item_bg"
                    app:itemImgHeight="20dp"
                    app:itemImgSrc="@mipmap/into"
                    app:itemImgWidth="20dp"
                    app:itemText="@string/Areamanagement"
                    app:itemText2Visible="gone"
                    app:itemTextColor="@color/black"/>

                <com.xyw.smartlock.view.LayoutItem1
                    android:id="@+id/moremuch_switchArea"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/layout_item_bg"
                    app:itemImgHeight="20dp"
                    app:itemImgSrc="@mipmap/into"
                    app:itemImgWidth="20dp"
                    app:itemText="@string/switchArea"
                    app:itemText2Visible="gone"
                    app:itemTextColor="@color/black"/>

                <com.xyw.smartlock.view.LayoutItem1
                    android:id="@+id/moremuch_jurisdiction"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/layout_item_bg"
                    app:itemImgHeight="20dp"
                    app:itemImgSrc="@mipmap/into"
                    app:itemImgWidth="20dp"
                    app:itemText="@string/jurisdictionmanagement"
                    app:itemText2Visible="gone"
                    app:itemTextColor="@color/black"/>

                <com.xyw.smartlock.view.LayoutItem1
                    android:id="@+id/moremuch_dayreport"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/layout_item_bg"
                    app:itemImgHeight="20dp"
                    app:itemImgSrc="@mipmap/into"
                    app:itemImgWidth="20dp"
                    app:itemText="@string/lockstatistics"
                    app:itemText2Visible="gone"
                    app:itemTextColor="@color/black"/>

                <com.xyw.smartlock.view.LayoutItem1
                    android:id="@+id/moremuch_unlockcontrail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/layout_item_bg"
                    app:itemImgHeight="20dp"
                    app:itemImgSrc="@mipmap/into"
                    app:itemImgWidth="20dp"
                    app:itemText="@string/unlockcontrail"
                    app:itemText2Visible="gone"
                    app:itemTextColor="@color/black"/>

                <com.xyw.smartlock.view.LayoutItem1
                    android:id="@+id/moreMuch_PersonnelMaintain"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/layout_item_bg"
                    app:itemImgHeight="20dp"
                    app:itemImgSrc="@mipmap/into"
                    app:itemImgWidth="20dp"
                    app:itemText="@string/PersonnelMaintain"
                    app:itemText2Visible="gone"
                    app:itemTextColor="@color/black"/>

                <com.xyw.smartlock.view.LayoutItem1
                    android:id="@+id/moremuch_quicklyunlock"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/layout_item_bg"
                    app:itemImgHeight="20dp"
                    app:itemImgSrc="@mipmap/into"
                    app:itemImgWidth="20dp"
                    app:itemText="@string/quicklyunlock"
                    app:itemText2Visible="gone"
                    app:itemTextColor="@color/black"/>

                <com.xyw.smartlock.view.LayoutItem1
                    android:id="@+id/moremuch_PD"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/layout_item_bg"
                    app:itemImgHeight="20dp"
                    app:itemImgSrc="@mipmap/into"
                    app:itemImgWidth="20dp"
                    app:itemText="@string/moremuch_PD"
                    app:itemText2Visible="gone"
                    app:itemTextColor="@color/black"/>

                <com.xyw.smartlock.view.LayoutItem1
                    android:id="@+id/moremuch_more_unlock"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/layout_item_bg"
                    app:itemImgHeight="20dp"
                    app:itemImgSrc="@mipmap/into"
                    app:itemImgWidth="20dp"
                    app:itemText="@string/direct_more_unlock"
                    app:itemText2Visible="gone"
                    app:itemTextColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearlayout_function"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:orientation="vertical">

                <com.xyw.smartlock.view.LayoutItem1
                    android:id="@+id/moremuch_readId"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/layout_item_bg"
                    app:itemImgHeight="20dp"
                    app:itemImgSrc="@mipmap/into"
                    app:itemImgWidth="20dp"
                    app:itemText="@string/chadangan"
                    app:itemText2Visible="gone"
                    app:itemTextColor="@color/black"/>

                <com.xyw.smartlock.view.LayoutItem1
                    android:id="@+id/moremuch_versionupdating"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/layout_item_bg"
                    app:itemImgHeight="20dp"
                    app:itemImgSrc="@mipmap/into"
                    app:itemImgWidth="20dp"
                    app:itemText="@string/versionupdating"
                    app:itemText2Visible="gone"
                    app:itemTextColor="@color/black"/>

                <com.xyw.smartlock.view.LayoutItem1
                    android:id="@+id/moremuch_help"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/layout_item_bg"
                    app:itemImgHeight="20dp"
                    app:itemImgSrc="@mipmap/into"
                    app:itemImgWidth="20dp"
                    app:itemText="@string/help"
                    app:itemText2Visible="gone"
                    app:itemTextColor="@color/black"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>